k8s/ebs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newblog-deployment
  labels:
    app: newblog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newblog
  template:
    metadata:
      labels:
        app: newblog
    spec:
      containers:
      - name: newblog
        image: mammarraza/newblog:latest
        ports:
        - containerPort: 5001
        volumeMounts:
        - name: ebs-volume
          mountPath: /data/db
      volumes:
      - name: ebs-volume
        persistentVolumeClaim:
          claimName: existing-ebs-pvc
