k8s/newblog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: newblog-service
spec:
  selector:
    app: newblog
  ports:
  - protocol: TCP
    port: 5001          
    targetPort: 5001
