k8s/newblog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-eks-newblog
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
  - host: abc.exportthreads.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: newblog-service
            port:
              number: 5001
#
